Improve Firefox update support

--- a/README
+++ b/README
@@ -1954,7 +1954,9 @@ SUBROUTINES/METHODS
  update
 
     queries the Update Services and applies any available updates. Restarts
-    the browser if necessary to complete the update.
+    the browser if necessary to complete the update. This function is
+    experimental and currently has not been successfully tested on Win32 or
+    MacOS.
 
         use Firefox::Marionette();
         use v5.10;
