Updating bug reporting url

--- a/README
+++ b/README
@@ -2337,11 +2337,8 @@ BUGS AND LIMITATIONS
 
       * WebDriver:SetScreenOrientation
 
-    No bugs have been reported.
-
-    Please report any bugs or feature requests to
-    bug-firefox-marionette@rt.cpan.org, or through the web interface at
-    http://rt.cpan.org.
+    To report a bug, or view the current list of bugs, please visit
+    https://github.com/david-dick/firefox-marionette/issues
 
 SEE ALSO
 
