Fixing documentation for images/links methods

--- a/README
+++ b/README
@@ -1135,6 +1135,29 @@ SUBROUTINES/METHODS
     
         say Firefox::Marionette->new()->go('https://metacpan.org/')->html();
 
+ images
+
+    returns a list of all of the following elements;
+
+      * img <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img>
+
+      * image inputs
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/image>
+
+    as Firefox::Marionette::Image objects.
+
+    This method is subject to the implicit timeout, which, by default is 0
+    seconds.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new()->go('https://metacpan.org/');
+        if (my $link = $firefox->images()) {
+            say "Found a image with width " . $image->width() . "px and height " . $image->height() . "px from " . $image->URL();
+        }
+
+    If no elements are found, this method will return undef.
+
  install
 
     accepts the following as the first parameter;
@@ -1283,9 +1306,24 @@ SUBROUTINES/METHODS
 
  links
 
-    returns a list of all links
-    <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a> as
-    elements.
+    returns a list of all of the following elements;
+
+      * anchor
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a>
+
+      * area
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/area>
+
+      * frame
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/frame>
+
+      * iframe
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/iframe>
+
+      * meta
+      <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta>
+
+    as Firefox::Marionette::Link objects.
 
     This method is subject to the implicit timeout, which, by default is 0
     seconds.
@@ -1293,8 +1331,10 @@ SUBROUTINES/METHODS
         use Firefox::Marionette();
     
         my $firefox = Firefox::Marionette->new()->go('https://metacpan.org/');
-        if (my $element = $firefox->links()) {
-            # do something
+        if (my $link = $firefox->links()) {
+            if ($link->tag() eq 'a') {
+                warn "Found a hyperlink to " . $link->URL();
+            }
         }
 
     If no elements are found, this method will return undef.
