--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Firefox-Marionette
 
+1.14  Wed Oct 27 20:45 2021
+       Improving links method to return a Links object
+       Adding images method
+       Improving inheritance support with Scalar::Util
+
 1.13  Sun Oct 17 20:45 2021
        Adding devtools, kiosk parameters to the new method
        Adding links method
