--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.15  Sun Oct 31 17:46 2021
+       Updates for Firefox 94
+
 1.14  Wed Oct 27 20:45 2021
        Improving links method to return a Links object
        Adding images method
