--- a/README
+++ b/README
@@ -268,6 +268,11 @@ SUBROUTINES/METHODS
     before returning, which, by default is 5 minutes. This method returns
     itself to aid in chaining methods.
 
+ debug
+
+    accept a boolean and return the current value of the debug setting.
+    This allows the dynamic setting of debug.
+
  default_binary_name
 
     just returns the string 'firefox'. Only of interest when sub-classing.
@@ -1439,7 +1444,8 @@ SUBROUTINES/METHODS
 
       * debug - should firefox's debug to be available via STDERR. This
       defaults to "0". Any ssh connections will also be printed to STDERR.
-      This defaults to "0" (off).
+      This defaults to "0" (off). This setting may be updated by the debug
+      method.
 
       * developer - only allow a developer edition
       <https://www.mozilla.org/en-US/firefox/developer/> to be launched.
