Workaround documentation for firefox downloading a file using the go method.  Thanks to Alberto Luaces for the bug report in GH#13.

--- a/README
+++ b/README
@@ -940,6 +940,9 @@ SUBROUTINES/METHODS
         my $firefox = Firefox::Marionette->new( capabilities => Firefox::Marionette::Capabilities->new( page_load_strategy => 'eager' ));
         $firefox->go('https://metacpan.org/'); # will return once the main document has been loaded and parsed, but BEFORE sub-resources (images/stylesheets/frames) have been loaded.
 
+    When going directly to a URL that needs to be downloaded, please see
+    BUGS AND LIMITATIONS for a necessary workaround.
+
     This method returns itself to aid in chaining methods.
 
  har
@@ -2444,6 +2447,29 @@ INCOMPATIBILITIES
     support that this module could be patched to work with.
 
 BUGS AND LIMITATIONS
+
+ DOWNLOADING USING GO METHOD
+
+    When using the go method to go directly to a URL containing a
+    downloadable file, Firefox can hang. You can work around this by
+    setting the page_load_strategy to none like below;
+
+        #! /usr/bin/perl
+    
+        use strict;
+        use warnings;
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new( capabilities => Firefox::Marionette::Capabilities->new( page_load_strategy => 'none' ) );
+        $firefox->go("https://github.com/david-dick/firefox-marionette/archive/refs/heads/master.zip");
+        while(!$firefox->downloads()) { sleep 1 }
+        while($firefox->downloading()) { sleep 1 }
+        foreach my $path ($firefox->downloads()) {
+            warn "$path has been downloaded";
+        }
+        $firefox->quit();
+
+ MISSING METHODS
 
     Currently the following Marionette methods have not been implemented;
 
