--- a/README
+++ b/README
@@ -1963,7 +1963,8 @@ SUBROUTINES/METHODS
     element (such as being returned from a find type operation), the script
     method will automatically translate that into a javascript object.
     Likewise, when the result being returned in a script method is an
-    element, it will be automatically translated into a perl object.
+    element <https://dom.spec.whatwg.org/#concept-element> it will be
+    automatically translated into a perl object.
 
         use Firefox::Marionette();
         use v5.10;
@@ -1974,7 +1975,7 @@ SUBROUTINES/METHODS
             say "Lucky find is a " . $element->tag_name() . " element";
         }
     
-        my $search_input = $firefox->find_by_id('metacpan_metacpan_search-input');
+        my $search_input = $firefox->find_by_id('metacpan_search-input');
     
         $firefox->script('arguments[0].style.backgroundColor = "red"', args => [ $search_input ]); # turn the search input box red
 
@@ -2020,15 +2021,14 @@ SUBROUTINES/METHODS
  shadow_root
 
     accepts an element as a parameter and returns it's ShadowRoot
-    <https://developer.mozilla.org/en-US/docs/Web/API/ShadowRoot> or throws
-    an exception.
+    <https://developer.mozilla.org/en-US/docs/Web/API/ShadowRoot> as a
+    shadow root object or throws an exception.
 
         use Firefox::Marionette();
         use Cwd();
     
-        my $firefox = Firefox::Marionette->new()->go('https://metacpan.org/');
+        my $firefox = Firefox::Marionette->new()->go('file://' . Cwd::cwd() . '/t/data/elements.html');
     
-        $firefox->go('file://' . CWd::cwd() . 't/data/elements.html');
         $firefox->find_class('add')->click();
         my $custom_square = $firefox->find_tag('custom-square');
         my $shadow_root = $firefox->shadow_root($custom_square);
@@ -2047,9 +2047,7 @@ SUBROUTINES/METHODS
         use Firefox::Marionette();
         use Cwd();
     
-        my $firefox = Firefox::Marionette->new()->go('https://metacpan.org/');
-    
-        $firefox->go('file://' . CWd::cwd() . 't/data/elements.html');
+        my $firefox = Firefox::Marionette->new()->go('file://' . Cwd::cwd() . '/t/data/elements.html');
         $firefox->find_class('add')->click();
         my $custom_square = $firefox->find_tag('custom-square');
         if ($firefox->shadowy($custom_square)) {
