--- a/README
+++ b/README
@@ -1975,7 +1975,7 @@ SUBROUTINES/METHODS
             say "Lucky find is a " . $element->tag_name() . " element";
         }
     
-        my $search_input = $firefox->find_by_id('metacpan_search-input');
+        my $search_input = $firefox->find_id('metacpan_search-input');
     
         $firefox->script('arguments[0].style.backgroundColor = "red"', args => [ $search_input ]); # turn the search input box red
 
