--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.20  Mon Jan 24 19:55 2022
+       Improving documentation
+
 1.19  Sun Jan 23 07:24 2022
        Fixing MANIFEST file
 
