--- a/README
+++ b/README
@@ -2403,7 +2403,12 @@ WEBGL
     <https://bugzilla.mozilla.org/show_bug.cgi?id=1375585>.
 
     3. REMOTE AUTOMATION OF FIREFOX VIA SSH cannot be used with WebGL at
-    the moment.
+    the moment when jumping to a linux/bsd server.
+
+    4. It can be tricky getting WebGL <https://en.wikipedia.org/wiki/WebGL>
+    to work with a Xvfb <https://en.wikipedia.org/wiki/Xvfb> instance.
+    glxinfo <https://dri.freedesktop.org/wiki/glxinfo/> can be useful to
+    help debug issues in this case.
 
     With all those conditions being met, WebGL
     <https://en.wikipedia.org/wiki/WebGL> can be enabled like so;
