--- a/README
+++ b/README
@@ -2409,7 +2409,8 @@ WEBGL
     3. It can be tricky getting WebGL <https://en.wikipedia.org/wiki/WebGL>
     to work with a Xvfb <https://en.wikipedia.org/wiki/Xvfb> instance.
     glxinfo <https://dri.freedesktop.org/wiki/glxinfo/> can be useful to
-    help debug issues in this case.
+    help debug issues in this case. The mesa-dri-drivers rpm is also
+    required for Redhat systems.
 
     With all those conditions being met, WebGL
     <https://en.wikipedia.org/wiki/WebGL> can be enabled like so;
