--- a/README
+++ b/README
@@ -1622,6 +1622,10 @@ SUBROUTINES/METHODS
       the specified user. See REMOTE AUTOMATION OF FIREFOX VIA SSH. The
       user will default to the current user name.
 
+      * via - specifies a proxy jump box
+      <https://man.openbsd.org/ssh_config#ProxyJump> to be used to connect
+      to a remote host. See the host parameter.
+
       * visible - should firefox be visible on the desktop. This defaults
       to "0".
 
@@ -2351,6 +2355,16 @@ REMOTE AUTOMATION OF FIREFOX VIA SSH
         # OR specify a different port to connect to
         
         my $firefox = Firefox::Marionette->new( host => 'remote.example.org', port => 2222, debug => 1 );
+        $firefox->go('https://metacpan.org/');
+    
+        # OR use a proxy host to jump via to the final host
+    
+        my $firefox = Firefox::Marionette->new(
+                                                 host  => 'remote.example.org',
+                                                 port  => 2222,
+                                                 via   => 'user@secure-jump-box.example.org:42222',
+                                                 debug => 1,
+                                              );
         $firefox->go('https://metacpan.org/');
 
     This module has support for creating and automating an instance of
